--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cover</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="/img/favicon.png" type="image/png">
     <script src="js/main.js" defer></script>
     <script src="js/rain.js" defer></script>
 </head>
